# ContextKeeper

./: .gitignore  README.md  contextkeeper.spec  contextkeeper.yaml  pyproject.toml  requirements.txt
docs/: ANIMATION_GUIDELINES.md  API_COMPATIBILITY.md  ARCHITECTURE.md  CODING_STANDARDS.md  COLOR_SYSTEM.md  COMPONENT_LIBRARY.md  CONFIGURATION.md  CONVERSATION_INSPECTOR.md  ContextKeeper_Project_Plan.md  DASHBOARD_LAYOUT.md  DASHBOARD_MOCKUPS.md  DASHBOARD_MOCKUP_PLAN.md  DASHBOARD_VISUALIZATION_AUDIT.md  DESIGN_LANGUAGE.md  DESIGN_SYSTEM.md  FUTURE_IDEAS.md  LIVE_FLOW_VISUALIZATION.md  PROJECT_HISTORY.md  README.md  ROADMAP.md  TEST_PLAN.md  TYPOGRAPHY.md  UI_COMPONENT_GUIDE.md  UI_STYLE_GUIDE.md
installer/: ContextKeeper.iss  LICENSE.txt  README.md
scripts/: build_release.ps1  install_service.ps1  uninstall_service.ps1
src/ctxkeeper/: __init__.py  app.py  branding.py  config.py  executable.py  logging_config.py  main.py  model_context.py  resources.py
tests/: test_activity.py  test_app.py  test_branding.py  test_compression_manager.py  test_compression_plan.py  test_config.py  test_config_persistence.py  test_context_meter.py  test_context_monitor.py  test_conversation_store.py  test_dashboard_connection.py  test_dashboard_inspector.py  test_dashboard_instrument_panel.py  test_dashboard_intelligence.py  test_dashboard_settings.py  test_dashboard_settings_ui.py  test_dashboard_snapshots.py  test_diagnostics_metrics.py  test_main_wizard.py  test_model_context.py  test_proxy_tags.py  test_resources.py  test_service_runner.py  test_summarizer.py  test_wizard.py
(+31 files in other folders)
