[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextkeeper-local"
version = "0.1.0"
description = "ContextKeeper transparent Ollama proxy and diagnostics dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ContextKeeper Project" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "PyYAML>=6.0.2",
    "psutil>=6.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
contextkeeper = "ctxkeeper.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
